--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "socket.io": "^4.5.1"
   },
@@ -34,6 +35,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.6.4",
+    "@types/nodemailer": "^6.4.7",
     "@types/passport": "^1.0.9",
     "@types/socket.io": "^3.0.2",
     "ts-node-dev": "^2.0.0",
