--- a/package.json
+++ b/package.json
@@ -1,48 +1,52 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "dev": "ts-node-dev src/index.ts",
-    "start": "node build/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@apollo/server": "^4.5.0",
-    "@types/fs-extra": "^11.0.1",
-    "bcrypt": "^5.1.0",
-    "cloudinary": "^1.35.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
-    "fs-extra": "^11.1.1",
-    "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.9.1",
-    "passport": "^0.6.0",
-    "socket.io": "^4.6.1"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/express-fileupload": "^1.4.1",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/mongoose": "^5.11.97",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^18.15.11",
-    "@types/nodemailer": "^6.4.7",
-    "@types/passport": "^1.0.12",
-    "@types/socket.io": "^3.0.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.3"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "tsc -p tsconfig.build.json",
+        "dev": "ts-node-dev src/index.ts",
+        "start": "node build/index.js",
+        "test": "jest"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@apollo/server": "^4.5.0",
+        "@types/fs-extra": "^11.0.1",
+        "bcrypt": "^5.1.0",
+        "cloudinary": "^1.35.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-fileupload": "^1.4.0",
+        "fs-extra": "^11.1.1",
+        "graphql": "^16.6.0",
+        "graphql-tag": "^2.12.6",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^7.0.3",
+        "morgan": "^1.10.0",
+        "nodemailer": "^6.9.1",
+        "passport": "^0.6.0",
+        "socket.io": "^4.6.1"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
+        "@types/express-fileupload": "^1.4.1",
+        "@types/jest": "^29.5.0",
+        "@types/jsonwebtoken": "^9.0.1",
+        "@types/mongoose": "^5.11.97",
+        "@types/morgan": "^1.9.4",
+        "@types/node": "^18.15.11",
+        "@types/nodemailer": "^6.4.7",
+        "@types/passport": "^1.0.12",
+        "@types/socket.io": "^3.0.2",
+        "jest": "^29.5.0",
+        "ts-jest": "^29.1.0",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.0.3"
+    }
 }
