--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@types/passport": "^1.0.12",
         "@types/socket.io": "^3.0.2",
         "jest": "^29.5.0",
+        "prisma": "^4.15.0",
         "ts-jest": "^29.1.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.0.3"
